# MLOps-homework

./: .gitignore  README.md  pyproject.toml
01-intro/: homework-2025.ipynb
02-experiment-tracking/: homework-2025.ipynb  hpo.py  register_model.py  train.py
03-orchestration/: homework-2025.ipynb  orchestration.py
04-deployment/: Dockerfile  homework-2025.ipynb  starter.ipynb  starter.py
05-monitoring/: docker-compose.yaml  evidently_metrics_calculation.py
05-monitoring/dashboards/: pred_drift.json  quantile_fare.json
