[project]
name = "mlops-zoomcamp-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evidently>=0.7.16",
    "hyperopt>=0.2.7",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "prefect>=3.6.2",
    "psycopg>=3.2.12",
    "psycopg-binary>=3.2.12",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "tqdm>=4.67.1",
]
